--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@types/react-native-snap-carousel": "^3.8.2",
+    "@types/styled-components-react-native": "^5.1.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^8.1.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
